# ripdoc

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/libripdoc/: Cargo.toml
crates/libripdoc/src/: error.rs  lib.rs  ripdoc.rs
crates/libripdoc/src/cargoutils/: manifest.rs  path.rs  registry.rs  resolved_target.rs  rustdoc_error.rs
crates/libripdoc/src/crateutils/: item.rs
crates/libripdoc/src/render/: items.rs  macros.rs  utils.rs
crates/libripdoc/tests/: enums.rs  filter.rs  functions.rs  impls.rs  listing.rs  targets.rs  utils.rs
crates/libruskel/: Cargo.toml
crates/libruskel/src/: cargoutils.rs  lib.rs  render.rs  ruskel.rs
crates/libruskel/src/cargo/: path.rs  resolved_target.rs  rustdoc_error.rs
crates/libruskel/src/cargoutils/: mod.rs  path.rs  registry.rs  resolved_target.rs  rustdoc_error.rs
crates/libruskel/src/render/: impls.rs  items.rs  macros.rs  mod.rs  state.rs
crates/libruskel/tests/: impls.rs
crates/ripdoc/: Cargo.toml
crates/ripdoc-cargo/: Cargo.toml
crates/ripdoc-cargo/src/: cache.rs  lib.rs  path.rs  registry.rs  resolved_target.rs
crates/ripdoc-cli/: Cargo.toml
crates/ripdoc-cli/src/: main.rs
crates/ripdoc-cli/src/poc/hotinterp/: main.rs
crates/ripdoc-core/: Cargo.toml
crates/ripdoc-core/src/: lib.rs  list_tree.rs  search.rs  tests.rs
crates/ripdoc-core/tests/: enums.rs  filter.rs  functions.rs  gaps.rs  impls.rs  listing.rs  utils.rs
crates/ripdoc-render/: Cargo.toml
crates/ripdoc-render/src/: core.rs  impls.rs  items.rs  markdown.rs  state.rs  utils.rs
crates/ruskel/src/: main.rs
docs/: SKELEBUILD_GUIDE.md  WASM_BUILD.md
nix/: default.nix
nix/bundles/: rust.config.nix
nix/bundles/ripdoc/: default.nix
nix/bundles/ripdoc/skills/ripdoc/: SKILL.md
nix/bundles/ripdoc/skills/ripdoc/references/: print.md  skelebuild.md
nix/flake/: default.nix
src/: agents_print.md  agents_ripdoc.md  lib.rs  main.rs
src/cargo_utils/: cache.rs  path.rs  registry.rs  resolved_target.rs  rustdoc_error.rs  target.rs
src/core_api/: backend.rs  error.rs  list_tree.rs  mod.rs  pattern.rs  search.rs  tests.rs
src/core_api/search/: index.rs  mod.rs  selection.rs  tests.rs  types.rs
src/render/: core.rs  impls.rs  items.rs  macros.rs  markdown.rs  mod.rs  signatures.rs  state.rs  utils.rs
src/render/items/: enums.rs  mod.rs  module.rs  others.rs  structs.rs  use_stmt.rs
src/render/syntax/: path.rs  types.rs
src/skelebuild/: agents_skelebuild.md  mod.rs  rebuild.rs  resolver.rs  state.rs
src/v2/: entry.rs  mod.rs  parse.rs  render.rs  scan.rs  search.rs  source.rs
tests/: enums.rs  filter.rs  functions.rs  gaps.rs  impls.rs  listing.rs  misc.rs  modules.rs  reexports.rs  skelebuild.rs  targets.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
