[package]
name = "ripdoc"
version = "0.8.0"
edition = "2024"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
description = "Query Rust docs and crate API from the command line"
license = "MIT"
repository = "https://github.com/Alb-O/ripdoc"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[[bin]]
name = "ripdoc"
path = "src/main.rs"

[dependencies]
bincode = { version = "2.0", default-features = false, features = ["serde", "std"] }
bitflags = { version = "2.10", default-features = false }
cargo_metadata = { version = "0.23", default-features = false }
cargo_toml = { version = "0.22", default-features = false }
clap = { version = "4.5", features = ["derive"] }
dirs = { version = "6.0", default-features = false }
once_cell = { version = "1.21", default-features = false, features = ["std"] }
owo-colors = "4.2"
regex = { version = "1.12", default-features = false, features = ["std", "unicode-case"] }
rust-format = { version = "0.3", default-features = false }
rustdoc-json = { version = "0.9", default-features = false }
rustdoc-types = { version = "0.56", default-features = false }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tempfile = { version = "3.23", default-features = false }
ureq = { version = "3.1" }

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
missing_docs = "warn"

[patch.crates-io]
rustdoc-json = { git = "https://github.com/Alb-O/cargo-public-api" }
cargo-manifest = { git = "https://github.com/Alb-O/cargo-manifest" }
