[package]
name = "ripdoc-cargo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bincode = { version = "2.0", default-features = false, features = ["serde", "std"] }
cargo_metadata = { version = "0.23", default-features = false }
cargo_toml = { version = "0.22", default-features = false }
dirs = { version = "6.0", default-features = false }
once_cell.workspace = true
rustdoc-json = { version = "0.9", default-features = false }
rustdoc-types.workspace = true
semver = { version = "1.0", default-features = false }
serde_json.workspace = true
tempfile = { version = "3.23", default-features = false }
ureq = { version = "3.1" }

[lints]
workspace = true
