[package]
name = "ripdoc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[[bin]]
name = "ripdoc"
path = "src/main.rs"

[[bin]]
name = "hotinterp"
path = "src/poc/hotinterp/main.rs"
required-features = ["hot-interpreter"]

[features]
hot-interpreter = [
    "dep:anyhow",
    "dep:libloading",
    "dep:notify",
    "dep:subsecond",
    "dep:tempfile",
]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"] }
libloading = { version = "0.9", optional = true }
notify = { version = "8.2", optional = true }
owo-colors = "4.2"
ripdoc-cargo = { workspace = true }
ripdoc-core = { workspace = true }
serde_json.workspace = true
subsecond = { version = "0.7", optional = true }
tempfile = { version = "3.12", optional = true }

[lints]
workspace = true
