[package]
name = "ripdoc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bitflags = { version = "2.10", default-features = false }
ripdoc-cargo.workspace = true
ripdoc-render.workspace = true
rustdoc-types.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
rust-format.workspace = true
tempfile = { version = "3.23", default-features = false }

[lints]
workspace = true
