[package]
name = "ripdoc-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
once_cell = { workspace = true, features = [ "std" ] }
regex = { version = "1.12", default-features = false }
rust-format.workspace = true
rustdoc-types.workspace = true

[lints]
workspace = true
